--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,1 +1,45 @@
-// Entry point for your Sass build
+/*! 
+ * Primitive UI | MIT License
+ *
+ * A minimalist front-end design toolkit built with Sass for developing 
+ * responsive, browser-consistent web apps.
+ *
+ * Author: Tania Rascia <hello@taniarascia.com>
+ * Source: https://github.com/taniarascia/primitive
+ * Documentation: https://taniarascia.github.io/primitive
+ */
+
+//==============================================================================
+// Configuration
+//==============================================================================
+
+@import 'base/variables';
+@import 'base/mixins';
+@import 'base/fonts';
+
+//==============================================================================
+// Reset
+//==============================================================================
+
+@import 'base/normalize';
+@import 'base/reset';
+
+//==============================================================================
+// Components
+//==============================================================================
+
+@import 'components/scaffolding';
+@import 'components/flash';
+@import 'components/grid';
+@import 'components/helpers';
+@import 'components/buttons';
+@import 'components/forms';
+@import 'components/tables';
+@import 'components/navigation';
+@import 'components/layout';
+
+//==============================================================================
+// Resources
+//==============================================================================
+
+@import 'resources/raw_reviews';
